k8s/30-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ok
  template:
    metadata:
      labels:
        app: ok
    spec:
      containers:
        - name: ok
          image: txn2/ok:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
