k8s/go-ok-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ok-deployment
  labels:
    app: go-ok
    system: example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-ok
  template:
    metadata:
      labels:
        app: go-ok
        system: example
    spec:
      containers:
        - name: go-ok-container
          image: cjimti/go-ok:v3
          imagePullPolicy: Always
          ports:
            - name: go-ok-port
              containerPort: 8080
