k8s/ok-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ok
  labels:
    app: ok
    system: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ok
  template:
    metadata:
      labels:
        app: ok
        system: example
    spec:
      containers:
        - name: ok
          image: txn2/ok
          imagePullPolicy: Always
          ports:
            - name: ok-port
              containerPort: 8080
