k8s/10-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ok
  namespace: default
spec:
  selector:
    app: ok
  ports:
    - name: http
      protocol: "TCP"
      port: 8080
      targetPort: http
  type: ClusterIP
