k8s/ok-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ok
  labels:
    app: ok
    system: test
spec:
  selector:
    app: ok
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
