k8s/ok-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ok
  labels:
    app: ok
    system: test
spec:
  rules:
  - host: ok.txn2.com
    http:
      paths:
      - backend:
          serviceName: ok
          servicePort: 8080
        path: /
